<resources>
    <string name="app_name">WifiCleaner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="titulo_principal">Local Wireless Networks</string>

    <string name="questionConfWifi">Sure to Clear Wifi?</string>
    <string name="questionConfCache">Sure to Clear Cache?</string>
    <string name="aceptar">Ok</string>
    <string name="cancelar">Cancel</string>
    <string name="borrado">The networks have been successfully removed</string>
    <string name="app_intro">How to Use</string>
    <string name="nombre_de_la_red">Network name</string>
    <string name="tipo_de_red">Network type</string>
    <string name="clean_cache">Clean Cache</string>
    <string name="clean_wif">Clean Wifi Networks</string>
    <string name="estado">Status</string>
    <string name="intensidad">Intensity</string>
    <string name="velocidad">Speed</string>
    <string name="frecuencia">Frequency</string>
    <string name="seguridad">Security</string>
    <string name="share">Share</string>
    <string name="more_apps">More Apps</string>
    <string name="TextWifiApagado">Your device has the WiFi off</string>
    <string name="title1Intro">List of Wireless Networks</string>
    <string name="description1Intro">Available on your device, indicating by color.</string>
    <string name="description1Intro1">Green: Connected</string>
    <string name="description1Intro2">Purple: available</string>
    <string name="description1Intro3">Gray: out of scope</string>
    <string name="title2Intro">Intensive cleaning your Wifi Networks</string>
    <string name="description2Intro">Easily clean your Cache and wireless networks,
        through our menu buttons, eliminating unnecessary information and annoying problems.</string>
    <string name="title3Intro">Menu Options</string>
    <string name="description3Intro">Access our menu options, share them with friends and enjoy
        all of our applications.</string>
    <string name="shareText">Hey! Try this app, clean your wireless networks
        https://play.google.com/store/apps/details?id=</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="toast_clean">Cleaning successful</string>
    <string name="description_cache">If your version of Android is 6 or greater, by reasons of
        permissions, is redirect to them settings of storage to clean your cache, of it contrary
        is deleted automatically</string>

    <string name="description_wifi">If your version of Android is 6 or higher, by reasons of
        permissions, is redirect to them settings of networks to clean their networks stored,
        of it contrary is deleted automatically</string>
    <string name="wificonectado">Connected network</string>
    <string name="passwordinvalid">Invalid Password</string>
    <string name="authenticating">Authenticating Network</string>
    <string name="contrase_a">Password</string>
    <string name="mostrar_contrase_a">Show Password</string>
    <string name="conectar">Conect</string>
</resources>
