<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="13dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/ventana"
        android:id="@+id/cabeceraDialogFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/wifi_blanco"
            android:id="@+id/imageView2"/>

        <TextView
            android:text="@string/nombre_de_la_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/respuestaNombre"
            android:layout_gravity="center_vertical"
            android:textColor="@color/icons"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cabeceraDialogFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/textEstado"
                android:layout_below="@+id/imageView3"
                android:layout_toStartOf="@+id/imageView3"
                android:layout_marginEnd="25dp"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/intensidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textEstado"
                android:layout_alignStart="@+id/textEstado"
                android:layout_marginTop="5dp"
                android:id="@+id/textIntensidad"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/velocidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textIntensidad"
                android:layout_alignStart="@+id/textIntensidad"
                android:layout_marginTop="5dp"
                android:id="@+id/textVelocidad"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/frecuencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textVelocidad"
                android:layout_alignStart="@+id/textVelocidad"
                android:layout_marginTop="5dp"
                android:id="@+id/textFrecuencia"
                android:textStyle="bold"/>

            <TextView
                android:text="Respuesta Intensidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textVelocidad"
                android:layout_alignStart="@+id/respuestaEstado"
                android:id="@+id/respuestaIntensidad" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/ic_router"
                android:layout_marginTop="10dp"
                android:id="@+id/imageView3"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="@string/seguridad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textSeguridad"
                android:layout_below="@+id/textFrecuencia"
                android:layout_alignStart="@+id/textFrecuencia"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>

            <TextView
                android:text="Respuesta Seguridad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/respuestaSeguridad"
                android:layout_alignBaseline="@+id/textSeguridad"
                android:layout_alignBottom="@+id/textSeguridad"
                android:layout_alignStart="@+id/respuestaFrecuencia" />

            <TextView
                android:text="Respuesta Estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/respuestaEstado"
                android:layout_above="@+id/textIntensidad"
                android:layout_toEndOf="@+id/textFrecuencia"
                android:layout_marginStart="48dp" />

            <TextView
                android:text="Respuesta Frecuencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/respuestaFrecuencia"
                android:layout_alignBaseline="@+id/textFrecuencia"
                android:layout_alignBottom="@+id/textFrecuencia"
                android:layout_alignStart="@+id/respuestaVelocidad" />

            <TextView
                android:text="Respuesta Velocidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/respuestaVelocidad"
                android:layout_above="@+id/textFrecuencia"
                android:layout_alignStart="@+id/respuestaIntensidad" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textSeguridad"
                android:layout_marginTop="13dp"
                android:orientation="horizontal"
                android:weightSum="0">

                <Button
                    android:id="@+id/boton_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:background="#00ffffff"
                    android:backgroundTint="#00ffffff"
                    android:textColor="@color/ventanaConf"
                    android:textStyle="bold"
                    android:layout_weight="0.40" />

                <Button
                    android:id="@+id/boton_conectar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conectar"
                    android:background="#00ffffff"
                    android:backgroundTint="#00ffffff"
                    android:textColor="@color/secondary_text"
                    android:textStyle="bold"
                    android:layout_weight="0.40"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>