<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="#FF523399"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/title1Intro"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/intro2" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/description1Intro"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_wifi_lock_verde"

            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/imageView"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_wifi_lock_lila"
            android:layout_below="@id/imageView"

            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/imageView2" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_wifi_blanco"
            android:layout_below="@id/imageView2"

            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/imageView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/description1Intro1"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_alignTop="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:id="@+id/textView2"
            android:text="@string/description1Intro2"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_alignTop="@+id/imageView2"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_below="@id/textView2"
            android:text="@string/description1Intro3"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_alignTop="@+id/imageView3"
            android:layout_toRightOf="@+id/imageView3"
            android:layout_toEndOf="@+id/imageView3"/>
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp" />
</LinearLayout>
